--- a/package.json
+++ b/package.json
@@ -1,11 +1,30 @@
 {
-  "name": "swift_shopper_backend",
+  "name": "auction_hub",
   "version": "1.0.0",
   "description": "A MERN stack multi vendor bidding application",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "author": "Abhishek Gogoi",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "agenda": "^5.0.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "cloudinary": "^2.2.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
+    "mongoose": "^8.4.4",
+    "nodemailer": "^6.9.14",
+    "nodemon": "^3.1.4",
+    "socket.io": "^4.7.5",
+    "stripe": "^16.1.0",
+    "validator": "^13.12.0"
+  }
 }
